小觅和TCP传输接口

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /FriedLiver/scans
+/FriedLiver/x64
+/FriedLiver/.vs/FriedLiver/v15
+*.pdb
