--- a/FriedLiver/FriedLiver.vcxproj.filters
+++ b/FriedLiver/FriedLiver.vcxproj.filters
@@ -155,6 +155,12 @@
     <ClCompile Include="Source\MynteyeSensor.cpp">
       <Filter>Sensors</Filter>
     </ClCompile>
+    <ClCompile Include="Source\DepthSensing\Shader.cpp">
+      <Filter>DepthSensing</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\DepthSensing\VR.cpp">
+      <Filter>DepthSensing</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\FriedLiver.h" />
@@ -410,6 +416,12 @@
     </ClInclude>
     <ClInclude Include="Source\MynteyeSensor.h">
       <Filter>Sensors</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\DepthSensing\VR.h">
+      <Filter>DepthSensing</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\DepthSensing\Shader.hpp">
+      <Filter>DepthSensing</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
